Añadido campo apiKey, cadenas en las propiedades

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -774,8 +774,8 @@ exito.informacion          = Informaci\u00F3n
 export.to.pdf.title                    = Exportar los resultados del rastreo a formato PDF
 
 exportar.resultados.observatorio.title = Exportar los resultados del Observatorio
-exportar.backup.entidades = Generación de backup de entidades
-exportar.entidades.exito  = Entidades exportadas con éxito
+exportar.backup.entidades = Generaciï¿½n de backup de entidades
+exportar.entidades.exito  = Entidades exportadas con ï¿½xito
 
 fallo.cuenta.cliente = Fallo al crear cuenta cliente.
 fallo.observatorio   = Fallo al crear el obnservatorio.
@@ -859,10 +859,10 @@ importar.semillas.info                        = Se ha procesado correctamente el
 importar.semillas.info2                       = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
 importar.semillas.title                       = Importaci\u00F3n masiva de semillas
 
-importar.entidades.titulo                     = Resultado importación entidades
-importar.entidades.exito                      = Entidades importadas con éxito
+importar.entidades.titulo                     = Resultado importaciï¿½n entidades
+importar.entidades.exito                      = Entidades importadas con ï¿½xito
 importar.entidades.error                      = Error al importar entidades
-importar.entidades.ambitos                    = Ámbitos
+importar.entidades.ambitos                    = ï¿½mbitos
 importar.entidades.complejidades              = Complejidades
 importar.entidades.dependencias               = Dependencias
 importar.entidades.etiquetas                  = Etiquetas
@@ -1129,7 +1129,7 @@ mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la 
 mensaje.error.plantilla.obligatorio                           = La plantilla es obligatoria
 mensaje.error.nombre.range.duplicado                          = Nombre de rango duplicado
 mensaje.error.nombre.range.obligatorio                        = Nombre de rango obligatorio
-mensaje.error.range.incorrecto                                = Valores de rango incorrectos. Valores válidos [Desde -99.99 hasta 99.99]
+mensaje.error.range.incorrecto                                = Valores de rango incorrectos. Valores vï¿½lidos [Desde -99.99 hasta 99.99]
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -1259,8 +1259,8 @@ menuadmin.importar.entidades                  = Importar Entidades
 menuadmin.exportar.entidades                  = Exportar Entidades
 menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
 menuadmin.exportar.title					  = Acceder a a parte de Exportaci\u00F3n de datos del Rastreador
-menuadmin.apikeys.title                       = Gestión de apikeys 
-menuadmin.apikeys                             = Gestión de apikeys      
+menuadmin.apikeys.title                       = Gesti\u00F3n de apikeys 
+menuadmin.apikeys                             = Gesti\u00F3n de apikeys      
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
@@ -1697,6 +1697,17 @@ nueva.etiqueta.observatorio.modal.title            = RASTREADOR WEB - Nueva etiq
 nueva.etiqueta.observatorio.nombre                 = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia            = Recurrencia
 nueva.etiqueta.observatorio.tematica               = Tematica
+nueva.apiKey                                       = Nueva apiKey
+nueva.apiKey.descripcion                           = Descripcion
+nueva.apiKey.modal.eliminar.confirm                = \u00BFDesea eliminar la apiKey 
+nueva.apiKey.modal.eliminar.title                  = RASTREADOR WEB - Eliminar apiKey
+nueva.apiKey.modal.title                           = RASTREADOR WEB - Nueva apiKey
+nueva.apiKey.nombre                                = Nombre de la apiKey
+nueva.apiKey.apiKey                                = ApiKey
+nueva.apiKey.tipo                                  = Tipo de apiKey
+nueva.apiKey.modal.nombre                          = Nombre
+nueva.apiKey.modal.tipo                            = Tipo
+nueva.apiKey.modal.descripcion                     = Descripcion
 nueva.plantilla.observatorio                       = Nueva plantilla
 nueva.plantilla.observatorio.fichero               = Fichero
 nueva.plantilla.observatorio.nombre                = Nombre de la plantilla
