--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -1106,7 +1106,7 @@ mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la 
 mensaje.error.plantilla.obligatorio                           = La plantilla es obligatoria
 mensaje.error.nombre.range.duplicado                          = Nombre de rango duplicado
 mensaje.error.nombre.range.obligatorio                        = Nombre de rango obligatorio
-mensaje.error.range.incorrecto                                = Valores de rango incorrectos. Valores válidos [Desde -99.99 hasta 99.99]
+mensaje.error.range.incorrecto                                = Valores de rango incorrectos. Valores vï¿½lidos [Desde -99.99 hasta 99.99]
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -1231,8 +1231,8 @@ menuadmin.servicio_diagnostico                = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
-menuadmin.apikeys.title                       = Gestión de Apikeys
-menuadmin.apikeys                             = Gestión de Apikeys   
+menuadmin.apikeys.title                       = Gesti\u00F3n de Apikeys
+menuadmin.apikeys                             = Gesti\u00F3n de Apikeys   
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
@@ -1666,6 +1666,17 @@ nueva.etiqueta.observatorio.modal.title            = RASTREADOR WEB - Nueva etiq
 nueva.etiqueta.observatorio.nombre                 = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia            = Recurrencia
 nueva.etiqueta.observatorio.tematica               = Tematica
+nueva.apiKey                                       = Nueva apiKey
+nueva.apiKey.descripcion                           = Descripcion
+nueva.apiKey.modal.eliminar.confirm                = \u00BFDesea eliminar la apiKey 
+nueva.apiKey.modal.eliminar.title                  = RASTREADOR WEB - Eliminar apiKey
+nueva.apiKey.modal.title                           = RASTREADOR WEB - Nueva apiKey
+nueva.apiKey.nombre                                = Nombre de la apiKey
+nueva.apiKey.apiKey                                = ApiKey
+nueva.apiKey.tipo                                  = Tipo de apiKey
+nueva.apiKey.modal.nombre                          = Nombre
+nueva.apiKey.modal.tipo                            = Tipo
+nueva.apiKey.modal.descripcion                     = Descripcion
 nueva.plantilla.observatorio                       = Nueva plantilla
 nueva.plantilla.observatorio.fichero               = Fichero
 nueva.plantilla.observatorio.nombre                = Nombre de la plantilla
