--- a/portal/src/main/resources/__ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/__ApplicationResources-2012-b.properties
@@ -1410,6 +1410,17 @@ nueva.etiqueta.observatorio.distribucion   = Distribucion
 nueva.etiqueta.observatorio.nombre         = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.etiqueta.observatorio.tematica       = Tematica
+nueva.apiKey                               = Nueva apiKey
+nueva.apiKey.descripcion                   = Descripcion
+nueva.apiKey.modal.eliminar.confirm        = \u00BFDesea eliminar la apiKey 
+nueva.apiKey.modal.eliminar.title          = RASTREADOR WEB - Eliminar apiKey
+nueva.apiKey.modal.title                   = RASTREADOR WEB - Nueva apiKey
+nueva.apiKey.nombre                        = Nombre de la apiKey
+nueva.apiKey.apiKey                        = ApiKey
+nueva.apiKey.tipo                          = Tipo de apiKey
+nueva.apiKey.modal.nombre                  = Nombre
+nueva.apiKey.modal.tipo                    = Tipo
+nueva.apiKey.modal.descripcion             = Descripcion
 nueva.semilla.google                       = Nueva semilla
 nueva.semilla.google.info                  = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla         = Nombre de la Semilla:
