Arreglado bug apiKeys

--- a/portal/src/main/resources/.properties
+++ b/portal/src/main/resources/.properties
@@ -741,6 +741,7 @@ gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del O
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
+gestion.apikeys.observatorio.titulo         = Gesti\u00F3n de ApiKeys del Observatorio
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
@@ -1043,6 +1044,7 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
+mensaje.exito.apikey.generada                                 = ApiKey generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
