--- a/portal/src/main/resources/__ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/__ApplicationResources-2012-b.properties
@@ -938,6 +938,7 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
+mensaje.exito.apikey.generada                                 = ApiKey generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
