--- a/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
@@ -780,6 +780,7 @@ gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del O
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
 gestion.plantillas.observatorio.info.ira    = Actualmente desde esta secci\u00F3n se pueden gestionar las plantillas ods y xlsx de los <strong>Informe Revision Profundidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear (si no existe) una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profundidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
+gestion.apikeys.observatorio.titulo         = Gesti\u00F3n de ApiKeys del Observatorio
 gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
@@ -1111,6 +1112,7 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
+mensaje.exito.apikey.generada                                 = ApiKey generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
