Añadido campo booleano Activa

--- a/portal/src/main/resources/__ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/__ApplicationResources-2012-b.properties
@@ -1418,10 +1418,10 @@ nueva.apiKey.modal.eliminar.title          = RASTREADOR WEB - Eliminar apiKey
 nueva.apiKey.modal.title                   = RASTREADOR WEB - Nueva apiKey
 nueva.apiKey.nombre                        = Nombre de la apiKey
 nueva.apiKey.apiKey                        = ApiKey
-nueva.apiKey.tipo                          = Tipo de apiKey
+nueva.apiKey.activa                        = Activa
 nueva.apiKey.modal.nombre                  = Nombre
-nueva.apiKey.modal.tipo                    = Tipo
 nueva.apiKey.modal.descripcion             = Descripcion
+nueva.apiKey.modal.activa                  = Activa
 nueva.semilla.google                       = Nueva semilla
 nueva.semilla.google.info                  = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla         = Nombre de la Semilla:
