--- a/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
@@ -1720,10 +1720,10 @@ nueva.apiKey.modal.eliminar.title                  = RASTREADOR WEB - Eliminar a
 nueva.apiKey.modal.title                           = RASTREADOR WEB - Nueva apiKey
 nueva.apiKey.nombre                                = Nombre de la apiKey
 nueva.apiKey.apiKey                                = ApiKey
-nueva.apiKey.tipo                                  = Tipo de apiKey
+nueva.apiKey.activa                                = Activa
 nueva.apiKey.modal.nombre                          = Nombre
-nueva.apiKey.modal.tipo                            = Tipo
 nueva.apiKey.modal.descripcion                     = Descripcion
+nueva.apiKey.modal.activa                          = Activa
 nueva.semilla.webs.title                           = Listado de Webs
 
 nuevo.obaservatorio.depth.with.tip            = (Para las semillas que no tienen Complejidad asignada)
