Arreglada generacion aleatoria de apikey, edicion de apikey y añadidas cadenas de texto faltantes

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1124,7 +1124,9 @@ mensaje.error.nombre.complejidad.obligatorio                  = El nombre de la 
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etiqueta ya existente
+mensaje.error.nombre.apikey.duplicado                         = Nombre de apikey ya existente
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
+mensaje.error.nombre.apikey.obligatorio                       = El nombre de la apikey es obligatorio
 mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
 mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la plantilla es obligatorio
 mensaje.error.plantilla.obligatorio                           = La plantilla es obligatoria
@@ -1163,6 +1165,8 @@ mensaje.exito.dependencia.generada                            = Dependencia gene
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
 mensaje.exito.apikey.generada                                 = ApiKey generada con \u00E9xito.
+mensaje.exito.apikey.editada                                  = ApiKey editada con \u00E9xito.
+mensaje.exito.apikey.eliminada                                = ApiKey eliminada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
