--- a/portal/src/main/resources/__ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/__ApplicationResources-2012-b.properties
@@ -908,7 +908,9 @@ mensaje.error.nombre.complejidad.obligatorio                  = Todos los campos
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etiqueta ya existente
+mensaje.error.nombre.apikey.duplicado                         = Nombre de apikey ya existente
 mensaje.error.nombre.etiqueta.obligatorio                     = Todos los campos son obligatorios
+mensaje.error.nombre.apikey.obligatorio                       = El nombre de la apikey es obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -939,6 +941,7 @@ mensaje.exito.dependencia.generada                            = Dependencia gene
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
 mensaje.exito.apikey.generada                                 = ApiKey generada con \u00E9xito.
+mensaje.exito.apikey.eliminada                                = ApiKey eliminada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
