Adding signature to error emails

--- a/intavcore/src/test/resources/mail.properties
+++ b/intavcore/src/test/resources/mail.properties
@@ -34,3 +34,4 @@ sim.mailservice.id= 942
 # Mensajes de error en la aplicacion (movido de crawler.properties)
 alert.from.subject = [DESA] Error en la aplicaci\u00F3n del Rastreador
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
+warning.administrator.signature = ----------------------------------------------------------------\nServicio de Diagn\u00F3stico en l\u00EDnea del Observatorio de Accesibilidad Web\nSecretar\u00EDa General de Administraci\u00F3n Digital\nMinisterio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital\nContacto: observ.accesibilidad@correo.gob.es\n
