--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -28,5 +28,6 @@ sim.user.username        = observ.accesibilidad
 sim.mailservice.id       = 942
 
 
-
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
+warning.administrator.signature = ----------------------------------------------------------------\nServicio de Diagn\u00F3stico en l\u00EDnea del Observatorio de Accesibilidad Web\nSecretar\u00EDa General de Administraci\u00F3n Digital\nMinisterio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital\nContacto: observ.accesibilidad@correo.gob.es\n
+
