--- a/portal/profiles/mail.properties
+++ b/portal/profiles/mail.properties
@@ -15,3 +15,5 @@ mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1}
 incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
 incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
 incomplete.crawler.emails = observ.accesibilidad@correo.gob.es
+
+warning.administrator.signature = ----------------------------------------------------------------\nServicio de Diagn\u00F3stico en l\u00EDnea del Observatorio de Accesibilidad Web\nSecretar\u00EDa General de Administraci\u00F3n Digital\nMinisterio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital\nContacto: observ.accesibilidad@correo.gob.es\n
