--- a/portal/src/test/resources/mail.properties
+++ b/portal/src/test/resources/mail.properties
@@ -12,3 +12,7 @@ error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00ED
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 
 incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
+
+warning.administrator.signature = ----------------------------------------------------------------\nServicio de Diagn\u00F3stico en l\u00EDnea del Observatorio de Accesibilidad Web\nSecretar\u00EDa General de Administraci\u00F3n Digital\nMinisterio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital\nContacto: observ.accesibilidad@correo.gob.es\n
+
+
