--- a/portal/profiles/docker/mail.properties
+++ b/portal/profiles/docker/mail.properties
@@ -27,3 +27,5 @@ sim.user.password        =
 sim.user.username        = 
 
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
+warning.administrator.signature = ----------------------------------------------------------------\nServicio de Diagn\u00F3stico en l\u00EDnea del Observatorio de Accesibilidad Web\nSecretar\u00EDa General de Administraci\u00F3n Digital\nMinisterio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital\nContacto: observ.accesibilidad@correo.gob.es\n
+
