Arreglos de nombres, cadenas, etc.

--- a/portal/src/main/resources/__ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/__ApplicationResources-2012-b.properties
@@ -1178,6 +1178,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.apiKey                                             = ApiKeys
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
 migas.rastreo.editar.semilla                             = Editar Semilla
