Motor-js in use

--- a/motor-js/nginx/reverse.conf
+++ b/motor-js/nginx/reverse.conf
@@ -1,7 +1,7 @@
 upstream renderer-server  {
-  server renderer_1:3000;
-  server renderer_2:3000;
-  server renderer_3:3000;
+  server docker_renderer_1:3000;
+  server docker_renderer_2:3000;
+  server docker_renderer_3:3000;
 }
 
 server {
@@ -32,7 +32,7 @@ server {
 		if ($arg_url ~* '\.ppt') { set $prerender 0; }
 		if ($arg_url ~* '\.pptx') { set $prerender 0; }		
 		
-		resolver 10.253.252.21;
+		resolver 8.8.8.8;
     
 		if ($prerender = 1) {
 			set $prerenderServer "renderer-server";
@@ -84,7 +84,7 @@ server {
 		if ($request_uri ~* '\.ppt') { set $prerender 0; }
 		if ($request_uri ~* '\.pptx') { set $prerender 0; }		
 		
-		resolver 10.253.252.21;
+		resolver 8.8.8.8;
     
 		if ($prerender = 1) {
 			set $prerenderServer "renderer-server";
