--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
     renderer-1:
       privileged: true
-      build: ./renderer
+      build: ../motor-js/renderer
       image: oawjs_renderer
       cpus: 2
       restart: always
@@ -13,7 +13,7 @@ services:
 
     renderer-2:
       privileged: true
-      build: ./renderer
+      build: ../motor-js/renderer
       image: oawjs_renderer
       cpus: 2
       restart: always
@@ -22,7 +22,7 @@ services:
 
     renderer-3:
       privileged: true
-      build: ./renderer
+      build: ../motor-js/renderer
       image: oawjs_renderer
       cpus: 2
       restart: always
@@ -30,7 +30,7 @@ services:
       container_name: docker_renderer_3
       
     proxy:
-      build: ./proxy      
+      build: ../motor-js/proxy      
       image: oawjs_proxy
       command: node /opt/proxy/index.js
       restart: always
@@ -41,9 +41,9 @@ services:
     nginx:
       image: nginx:1.13.8-alpine      
       volumes:
-        - ./nginx/reverse.conf:/etc/nginx/conf.d/default.conf
-        - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt
-        - ./nginx/certs/server.key:/etc/nginx/ssl/server.key        
+        - ../motor-js/nginx/reverse.conf:/etc/nginx/conf.d/default.conf
+        - ../motor-js/nginx/certs/server.crt:/etc/nginx/ssl/server.crt
+        - ../motor-js/nginx/certs/server.key:/etc/nginx/ssl/server.key        
       links:
         - renderer-1
         - renderer-2
@@ -60,9 +60,6 @@ services:
       environment:
         MYSQL_ROOT_PASSWORD: root
       volumes:
-        # Si se coloca un fichero .sql.gz en la ruta del cointainer indicada
-        # se lanzará el script contenido al inicializar la base de datos.
-        # Comentar esta línea si no es necesaria
         - "./mysql/01_schema.sql:/docker-entrypoint-initdb.d/01_schema.sql"
         - "./mysql/02_data.sql:/docker-entrypoint-initdb.d/02_data.sql"
         - "./volumes/mysql/:/var/lib/mysql/"
